# esphome-mcp

./: CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/esphome_mcp/: __main__.py  client.py  server.py
tests/: conftest.py  test_tools.py
