[project]
name = "esphome-mcp"
version = "0.1.0"
description = "MCP server for interacting with an ESPHome dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
esphome-mcp = "esphome_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
