[project]
name = "esphome-mcp"
version = "0.1.0"
description = "MCP server for interacting with an ESPHome dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
esphome-mcp = "esphome_mcp.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "RUF"]

[tool.ty.environment]
python-version = "3.11"
